RWd調整+與後台串接

--- a/order.html
+++ b/order.html
@@ -120,21 +120,15 @@
                             <h2>訂票資訊2</h2>
                           </div>
 
-                          <div class="col-md-12 col-lg-12 order-md-last" style="background-color: rgb(249, 249, 250);">
+                          <div class="col-md-12 col-lg-12 order-md-last">
 
-                            <h4 class="d-flex justify-content-center align-items-center mb-3">
-                              <span class="text-primary">購票人資料</span>
-                            </h4>
-
-                            <div class="col-lg-12 align-self-center"
-                              style="background-image: url(/tickets/img/contact-form-bg.png);">
+                            <div class="col-lg-12 align-self-center" >
                               <form id="contact" action="" method="get">
                                 <div class="row">
 
                                   <!-- 訂票資訊 -->
-                                  <div class="col-lg-6">
+                                  <div class="col-lg-6" >
                                     <div class="py-5 text-center text-primary">
-                                      <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
                                       <h2>訂票資訊</h2>
                                     </div>
                                     <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -142,8 +136,6 @@
                                       <!-- <span class="badge bg-primary rounded-pill">訂票數:3</span> -->
                                     </h4>
                                     <ul class="list-group mb-3">
-
-
                                       </li>
                                       <li class="list-group-item d-flex justify-content-between lh-sm">
                                         <h5 class="my-0">出發日期:</h5>
@@ -255,9 +247,9 @@
                                     <button class="main-button pt-3" id="articleA_send">
                                       <h3>送出</h3>
                                     </button>
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
+                                    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
                                       開啟模態對話框
-                                    </button>
+                                    </button> -->
                                   </div>
 
                                 </div>
@@ -290,7 +282,7 @@
                                 
                                 <div class="table-responsive text-green">
                                   <form id="contact" class="get_form" action="" method="get"
-                                    style="background-image: url(/tickets/img/contact-form-bg.png);">
+                                    style="background-image: url(/tickets/img/contact-form-bg-2.png);">
                                     <table>
                                       <div id="planpickered" class="mt-4 pt-3 pb-1 bg-green" >
                                         <h2 id="contact" class=" section-title mb-3 text-center text-white">XX票種</h2>
