--- a/pay_success.html
+++ b/pay_success.html
@@ -99,7 +99,7 @@
                                     <div class="container  mb-5">
                                         <div class="tab-content" style="padding-left: 2%;padding-right: 2%;">
                                             <article id="articleA" class="my-3 tab-pane">
-                                                <main id="inner">
+                                                <main>
                                                     <div class=" py-5 text-center text-white">
                                                         <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
                                                         <h2>付款成功</h2>
@@ -190,7 +190,7 @@
                                                                                             <tbody id="tickets-result"
                                                                                                 class="text-center">
                                                                                                 <tr>
-                                                                                                    <th>身分證/護照號碼：</th>
+                                                                                                    <th>身分證<br>護照號碼：</th>
                                                                                                     <th>A123456789</th>
                                                                                                 </tr>
                                                                                                 <tr>
@@ -231,7 +231,7 @@
                                                                                             <div
                                                                                                 class="table-responsive ">
                                                                                                 <table
-                                                                                                    class="table text-center text-white">
+                                                                                                    class="table text-center text-">
                                                                                                     <thead>
                                                                                                         <tr>
 
@@ -426,7 +426,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <!-- 連結網頁主程式 -->
-    <script src="/tickets/js/pay_success.js"></script>
+    <script src="/tickets/js/order.js"></script>
 
 
 
