--- a/pay_fail.html
+++ b/pay_fail.html
@@ -91,32 +91,30 @@
         <header id="header" class=" glass jumbotron text-center bg-dark">
             <div id="glass" class="container">
 
-                <section id="featuresSection" class="py-5" style="border-radius: 15px;">
+                <section id="featuresSection" class="py-5">
                     <div>
                         <div class="row justify-content-center">
-                            <div class="col-12">
+                            <div class="col-lg-12 col-md-8 col-sm-4">
                                 <section id="introSection" class="py-5">
-                                    <div class="container  mb-5">
+                                    <div class="mb-5">
                                         <div class="tab-content" style="padding-left: 2%;padding-right: 2%;">
                                             <article id="articleA" class="my-3 tab-pane">
-                                                <main id="inner">
-                                                    <div class=" py-5 text-center text-white">
+                                                <main>
+                                                    <div class="font-rwd py-5 text-center text-white">
                                                         <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
                                                         <h2>付款失敗</h2>
-                                                        <h3 class="quote">"Payment Successful"</h3>
+                                                        <h3 class>"Payment Successful"</h3>
                                                         <p class="author"><em>~金廈海運~</em></p>
                                                     </div>
 
-                                                    <div class="col-md-12 col-lg-12 order-md-last">
-                                                        <div class="col-lg-12 align-self-center">
+                                                    <div class="col-md-6 col-lg-12 ">
+                                                        <div class=" align-self-center">
                                                             
                                                             <!--送出按鈕 -->
-                                                            <div class="col-lg-12 ">
-                                                                <a class="main_button" href="./ticketsPage.html#articleB">
+                                                                <a  class="main_button" href="./ticketsPage.html#articleB">
                                                                      <h3>重新訂票</h3>
                                                                 </a>
                                                                 
-                                                            </div>
                                                         </div>
                                                     </div>
                                                 </main>
@@ -137,15 +135,15 @@
 
     <!-- footer -->
     <footer id="footer" class="pt-5 bg-secondary text-white">
-        <div class="container">
+        <div id="container" class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6 footer-list">
-                    <h5>團體票聯絡資訊</h5>
+                    <h5>金門辦事處</h5>
                     <a href="mailto:service@brand.com">service@brand.com</a>
                 </div>
 
                 <div class="col-md-3 col-sm-6 footer-list">
-                    <h5 class="text-uppercase">公司聯絡資訊</h5>
+                    <h5 class="text-uppercase">廈門辦事處</h5>
 
                     <ul>
                         <li>
