--- a/picker.html
+++ b/picker.html
@@ -18,9 +18,13 @@
 <body>
     <div class='datepicker'>
         <div class="datepicker-header"></div>
+    </div>
+    <button id="btn">123</button>
 
-      </div>
-      <button id="btn">123</button>
+    <div id="datepicker2" class="calendar"></div>
+
+  
+
    
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
