--- a/mutilstep_form.html
+++ b/mutilstep_form.html
@@ -17,21 +17,21 @@
     <form id="msform">
     <!-- progressbar -->
     <ul id="progressbar">
-      <li class="active">Account Setup</li>
-      <li>Social Profiles</li>
+      <li class="active">Step1</li>
+      <li>Step2</li>
       <li>Personal Details</li>
     </ul>
     <!-- fieldsets -->
     <fieldset>
-      <h2 class="fs-title">Create your account</h2>
-      <h3 class="fs-subtitle">This is step 1</h3>
+      <h2 class="fs-title">聯絡人資料</h2>
+      <h3 class="fs-subtitle">聯絡人資料</h3>
       <input type="text" name="email" placeholder="Email" />
       <input type="password" name="pass" placeholder="Password" />
       <input type="password" name="cpass" placeholder="Confirm Password" />
       <input type="button" name="next" class="next action-button" value="Next" />
     </fieldset>
     <fieldset>
-      <h2 class="fs-title">Social Profiles</h2>
+      <h2 class="fs-title">客戶需求</h2>
       <h3 class="fs-subtitle">Your presence on the social network</h3>
       <input type="text" name="twitter" placeholder="Twitter" />
       <input type="text" name="facebook" placeholder="Facebook" />
