--- a/pay_success2.html
+++ b/pay_success2.html
@@ -2,33 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- 光瑞給的 -->
-    <!-- <meta name="_csrf" th:content="${_csrf.token}">
-    <meta name="_csrf_header" th:content="${_csrf.headerName}">  -->
+  <!-- 光瑞給的<meta name="_csrf" th:content="${_csrf.token}">
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"> -->
 
-    <title>金廈海運-訂票</title>
-    <link rel="icon shortcut" href="/tickets/img/favicon.ico">
+  <title>金廈海運-訂票首頁</title>
+  <!-- <link rel="icon shortcut" href="./img/favicon.ico"> -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+  <!-- TODO: 客製化Bootstrap CSS -->
+  <link rel="stylesheet" href="/tickets/css/bootstrap.css">
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <!-- Bootstrap CSS -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
-    <!-- TODO: 客製化Bootstrap CSS -->
-    <link rel="stylesheet" href="/tickets/css/bootstrap.css">
-    <!-- 使用style.css -->
-    <link rel="stylesheet" href="/tickets/css/pay_success.css">
+
+  <!-- 使用font awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+    integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+
+  <!-- 使用style.css -->
+  <link rel="stylesheet" href="/tickets/css/pay_success.css">
+ 
 
 </head>
 
 <body>
-
+  
     <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top ">
         <a class="navbar-brand" href="/index">首頁</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
@@ -191,15 +197,14 @@
                                                                         class="mt-2 pb-3 mb-4  text-white">
                                                                     </h3>
                                                                     <!-- <h5 class=" pb-3 mb-4 ">(請下拉選單)</h5> -->
-                                                                    <button id="toggleButton" 
+                                                                    <button 
                                                                         class="btn d-inline-flex align-items-center collapsed border-0"
                                                                         data-bs-toggle="collapse"
                                                                         aria-expanded="false"
                                                                         data-bs-target="#contents_collapse"
                                                                         aria-controls="contents_collapse">付款細項</button>
                                                                         <div id="contents_collapse" class="collapse">
-                                                                            <ul class="list-unstyled ps-3"
-                                                                                id="contents-collapse">
+                                                                            <ul class="list-unstyled ps-3 collapse ">
                                                                                 <li class="my-2">
                                                                                     <div class="table-responsive">
                                                                                         <form id="contact"
@@ -348,32 +353,26 @@
 
 
 
-    <!-- 引用 https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js-->
-    <script> src = "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"</script>
-    <!-- <script> src = "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"</script> -->
+  <!--                              引用資料                                -->
+
+  <!-- 引用 https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js-->
+  <script> src = "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"</script>
+  <!-- <script> src = "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"</script> -->
 
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <!-- moadal會引用到 -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+  <!-- datepicker會引用到 --> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/i18n/jquery.ui.datepicker-zh-TW.min.js"></script>
+  
 
 
-    <!-- jquery.min.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <!-- popper.min.js -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@5.3.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script> -->
-    <!-- bootstrap.min.js -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-
-    <!-- 連結網頁主程式 -->
-    <script src="/tickets/js/pay_success.js"></script>
+  <!-- 連結網頁主程式 -->
+  <script src="/tickets/js/pay_success.js"></script>
 
 
 
