--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -474,8 +474,8 @@
 
 
                         <!-- 修正排版為三項排一排 -->
-                        <div class="row mt-5 mb-5 text-white justify-content-center">
-                          <div class="col-lg-4 col-md-3 col-sm-3 pb-5">
+                        <div class="row mt-5 mb-3 text-white justify-content-center">
+                          <div class="col-lg-4 col-md-3 col-sm-3 mb-5">
                             <!-- <div class="col-md-6 "> -->
                             <div class="intro-box">
                               <label for="plan">
@@ -494,7 +494,7 @@
                             </div>
                           </div>
 
-                          <div class="col-lg-4 col-md-3  col-sm-3 pb-5">
+                          <div class="col-lg-4 col-md-3  col-sm-3 mb-5">
                               <!-- hover -->
                               <!-- <div class="tooltip-container">
                                 <div class="tooltip-btn tooltip-toggle">Tooltip hover</div> 
@@ -516,7 +516,7 @@
                                  <input class="tooltip-btn tooltip-toggle" type="number" min="1" max="15" id="ticketQuantity" value="1">
                                       張
                                   <div class="tooltip-content">
-                                    <p>2歲以下嬰兒需要計票，費用另計!</p> 
+                                    <p>2歲以下嬰兒要計票!</p> 
                                   </div>
                                 </div>
                               </div>
@@ -537,7 +537,7 @@
 
                           </div>
 
-                          <div class="col-lg-4 col-md-3 col-sm-3  pb-5">
+                          <div class="col-lg-4 col-md-3 col-sm-3  mb-5">
                             <div class="intro-box">
                               <div class="datetimepicker">
                                 <label for="datetime">
