--- a/refund.html
+++ b/refund.html
@@ -29,8 +29,6 @@
 
   <!-- 使用style.css -->
   <link rel="stylesheet" href="/tickets/css/refun.css">
-  <!-- 使用日期輪用 -->
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 
 </head>
@@ -657,7 +655,7 @@
     crossorigin="anonymous"></script> -->
   <!-- 連結網頁主程式 -->
 
-  <script src="/tickets/js/main.js"></script>
+  <!-- <script src="/tickets/js/main.js"></script> -->
   <script src="/tickets/js/refund.js"></script>
   
 
