--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -322,39 +322,75 @@
                                         <i class="mb-4 fa-solid fa-thumbtack fa-rotate-by fa-2xl" style="color: #ff282c; --fa-rotate-angle: -45deg;"></i>
                                         注意事項
                                       </button>
-                                        <ul id="Tattention" class="list-group mb-3">
-                                            <li class="list-group-item  justify-content-center lh-sm">
+                                        <ul id="Tattention" class="list-group mb-1">
+                                            <li class="list-group-item justify-content-center lh-sm pt-1">
                                                 <div class="py-5 text-center text-primary">
                                                     <div class="table-responsive">
-
-                                                        <table class="circle justify-content-center">
-                                                            <thead>
-                                                              <tr>
-                                                                <th style="width: 100%;"id="etime">
-                                                                </th>
-                                                            </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                              <tr>
-                                                                <td>
-                                                                  <ul> 
-                                                                    <ol>台灣居民：乘船請攜帶護照正本、台胞證正本。</ol>
-                                                                    <ol>大陸居民：乘船請攜帶大陸居民往來台灣通行證、入台證。</ol>
-                                                                    <ol>香港、澳門居民：乘船請攜帶六個月以上有效期的港、澳護照+有效期内的回鄉卡。 </ol>
-                                                                    <ol>外籍人士：乘船入境金門請攜帶護照正本、台灣簽證。</ol>
-                                                                    <ol>外籍人士：乘船入境廈門請攜帶護照正本、中國簽證。</ol>
-                                                                    <ol>購買縣籍票之旅客：需攜帶護照正本、台胞證正本、身份證正本或相關證明文件。</ol>
-                                                                    <ol>購買殘障票之旅客：需攜護照正本、台胞證正本、殘障手冊正本。 </ol>
-                                                                    <ol>請於開航前60分鐘，至櫃檯辦理報到手續，且於開航前20分鐘結束通關，逾時不候。</ol>
-                                                                  </ul>
-                                                                </td>
-                                                            </tr>
-                                                            </tbody>
-                                                        </table>
+                                                      <form id="contact" class="get_form  ">
+                                                          
+                                                          <div  class="table-responsive ">
+                                                            <!-- <h5 id="contact" class=" section-title mb-3 text-center text-primary">
+                                                              日期:2021/10/23
+                                                            </h5> -->
+                                                              <table class="table text-center " border="1">
+                                                                  <thead>
+                                                                      <tr>
+                                                                        <td id="date" colspan="3">退票手續費級距:以出發日算起</td>
+                                                                      </tr>
+                                                                      <tr>
+                                                                          <th style="width: 30%;"
+                                                                              id="shipID0">
+                                                                              退票時間</th>
+                                                                          <th style="width: 30%;"
+                                                                              id="btime">
+                                                                              手續費</th>
+                                                                          <th style="width: 30%;"
+                                                                              id="qty">
+                                                                              退票</th>
+                                                                      </tr>
+                                                                  </thead>
+        
+                                                                  <tbody class="text-center">
+                                                                      <tr>
+                                                                        <td>8天前</td>
+                                                                        <td>退票不扣手續費</td>
+                                                                        <td>(全額退費)</td>
+                                                                      </tr>
+                                                                        <tr>
+                                                                          <td>7天內</td>
+                                                                          <td>收取手續費為票價的10%</td>
+                                                                          <td>(退費90%)</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                          <td>5-6天</td>
+                                                                          <td>收取手續費為票價的20%</td>
+                                                                          <td>(退費80%)</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                          <td>3-4天</td>
+                                                                          <td>收取手續費為票價的30%</td>
+                                                                          <td>(退費70%)</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                          <td>1-2天</td>
+                                                                          <td>收取手續費為票價的50%</td>
+                                                                          <td>(退費50%)</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                          <td>當天</td>
+                                                                          <td>,收取手續費為票價的100%</td>
+                                                                          <td>(不予以退費)</td>
+                                                                        </tr>
+                                                                  </tbody>
+                                                              </table>
+                                                          </div>
+                                                      </form>
                                                     </div>
                                                 </div>
                                             </li>
-                                        </ul>
+                                          </ul>
+
+
                                     </div>
                               </div>
                             </div>
