獲取訂票日期的checkbox

--- a/order.html
+++ b/order.html
@@ -247,9 +247,9 @@
                                     <button class="main-button pt-3" id="articleA_send">
                                       <h3>送出</h3>
                                     </button>
-                                    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
+                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
                                       開啟模態對話框
-                                    </button> -->
+                                    </button>
                                   </div>
 
                                 </div>
