--- a/T_Login.html
+++ b/T_Login.html
@@ -441,7 +441,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <!-- 連結網頁主程式 -->
-    <script src="/tickets/js/ticketsPage_copy.js"></script>
+    <script src="/tickets/js/T_Login.js"></script>
     
 
 
