--- a/refund.html
+++ b/refund.html
@@ -134,8 +134,8 @@
                                     <label class="form-check-label" for="same-address">全部退票(請打勾)</label>
                                   </div>
                                 </div>
-                                <p  id="orderId" style="display: none;">[[${tdate}]]</p>
-                                <p  id="orderPhone" style="display: none;">[[${btime}]]</p>
+                                <p  id="orderId" style="display: none;">[[${orderId}]]</p>
+                                <p  id="orderPhone" style="display: none;">[[${orderPhone}]]</p>
                     
                             </div>
                     
