--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -1148,7 +1148,7 @@
                                                                   <div class="button button-block" >
                                                                   <ul>
                                                                     <li>會員資格:公司</li>
-                                                                    <li>經過2-3個工作日審核會員資格後</li>
+                                                                    <li>經過2-3個工作日審核後</li>
                                                                     <li>Email通知會員帳號/密碼</li>
                                                                   </ul>
                                                               </td>
