在使用者資料編輯OFF的情形下才能執行換頁

--- a/try4.html
+++ b/try4.html
@@ -696,9 +696,9 @@
 
 
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                            <h2 class="border_line">
-                                                                <div class="inline">旅行社資料</div>
-                                                                <span class="">Your full name or the name</span>
+                                                            <h2 id="addloader" class="border_line">
+                                                                <div class="inline ">旅行社資料</div>
+                                                                <span id="eSpan" class="">編輯:請將按鈕切換成ON</span>
                                                                 <label>
                                                                     <input id="editBtn" type="checkbox"checked>
                                                                     <span>編輯ON</span>
