破解"previous"按鈕 沒有恢復到原本位置的原因

--- a/glass_login.html
+++ b/glass_login.html
@@ -115,8 +115,8 @@
 
                                                             <!-- progressbar -->
                                                             <ul id="progressbar">
-                                                                <li class="active">Step1</li>
-                                                                <li>Step2</li>
+                                                                <li class="active">票種選擇</li>
+                                                                <li>旅客資料輸入</li>
                                                                 <li>Personal Details</li>
                                                             </ul>
 
