按鈕功能鍵立+票種顏色設定

--- a/order_old.html
+++ b/order_old.html
@@ -597,7 +597,7 @@
 
 
                             <!-- 用JS產生 主要訂購人 資料 -->
-                            <!-- <li class="my-2">
+                            <li class="my-2">
                               <button class="btn d-inline-flex align-items-center collapsed border-0 mb-3"
                                 data-bs-toggle="collapse" aria-expanded="false"
                                 data-bs-target="#contents-collapse-order"
@@ -623,10 +623,10 @@
                                           value="" required>
                                         <input type="text" class="form-control" id="orderId" placeholder="身分證" value=""
                                           required>
-                                      </div> -->
+                                      </div> 
 
                                       <!-- 訂單開立方式 -->
-                                      <!-- <div class="col-lg-6 col-md-12  col-sm-12 text-primary mt-3   mb-5">
+                                     <div class="col-lg-6 col-md-12  col-sm-12 text-primary mt-3   mb-5">
                                         <div class="list-group-item d-flex justify-content-between lh-sm" colspan="2">
                                           <div class="table-responsive">
                                             <table class="table text-center">
@@ -655,46 +655,13 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="col-lg-6 col-md-12  col-sm-12 text-primary ">
-                                        <div class="table-responsive justify-content-center">
-                                          <h3 class="mt-5 pb-3 mb-4 border-bottom"></h3>
-                                        </div>
-                                      </div>
-                                      <div class="col-lg-6  text-primary row">
-                                        <fieldset>
-                                          <i class="fa-solid fa-cake-candles fa-4x"></i>
-                                          <h6>出生日期</h6>
-                                          <div>
-                                            <input type="date" id="birthdayPicker" placeholder="選擇日期範圍" value="">
-                                          </div>
-                                        </fieldset>
-                                        <fieldset>
-                                          <i class="fa-solid fa-venus-mars fa-4x"></i>
-                                          <h6>性別</h6>
-                                          <select class="form-select" id="gender" required>
-                                            <option value="">女</option>
-                                            <option>男</option>
-                                          </select>
-                                        </fieldset>
-                                        <fieldset>
-                                          <i class="fa-solid fa-earth-americas fa-4x"></i>
-                                          <h6>國籍</h6>
-                                          <select class="form-select" id="country" required>
-                                            <option value="">台灣</option>
-                                            <option>香港</option>
-                                            <option>大陸</option>
-                                            <option>其他</option>
-                                          </select>
-                                        </fieldset>
-                                      </div>
-                                      <div class="col-lg-2 col-md-4  col-sm-2 text-primary">
-                                      </div>
+                                     
                                     </div>
                                   </form>
                                 </div>
                               </ul>
                             </li>
- -->
+
 
 
 
