--- a/order_old.html
+++ b/order_old.html
@@ -31,7 +31,7 @@
   <!-- 使用style.css -->
   <link rel="stylesheet" href="/tickets/css/order.css">
   <!-- 使用日期輪用 -->
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 
 
 
@@ -247,9 +247,9 @@
                                     <button class="main-button pt-3" id="articleA_send">
                                       <h3>送出</h3>
                                     </button>
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
+                                    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#DetailModal">
                                       開啟模態對話框
-                                    </button>
+                                    </button> -->
                                   </div>
 
                                 </div>
