--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- TODO: 客製化Bootstrap CSS -->
-  <link rel="stylesheet" href="tickets/css/bootstrap.css">
+  <link rel="stylesheet" href="KingXia/tickets/css/bootstrap.css">
 
   <!-- Bootstrap CSS -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
