--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -28,7 +28,7 @@
 
 
   <!-- 使用style.css -->
-  <link rel="stylesheet" href="/tickets/css/new.css">
+  <link rel="stylesheet" href="KingXia/tickets/css/new.css">
   <!-- 日期用 -->
   <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
   
